ECA-11235: Converted mbeans declared in faces-config in the CA UI to use annotations instead